popovers: Add structural changes and fix CSS overlap.
The paragraph tag was being used along with the bold tag to style the
topic and stream in the popovers. The semantic meaning of these tags
are more specialized and should not be used in this context. Replaced
the <p> tags with the more general <div> tags and accounted for the
bold text via the `font-weight` CSS property.

The `.topic-name` class, used to style the topic/stream name in the
topic list in the left sidebar, was also being used to the style the
topic/stream name in the topic/stream popover. This lead to irrelevant
properties being applied to the popover > topic/stream name. Through
this commit, the styling for both of these different cases are now
separated using the appropriate selectors.

Fixes #27562.

--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -232,12 +232,14 @@
         white-space: nowrap;
     }
 
-    .topic-name {
+    .stream-name {
         align-items: baseline;
+        color: var(--color-text-sidebar-popover-menu);
         display: flex;
         gap: 3px;
-        margin-top: 5px;
-        margin-bottom: 5px;
+        font-weight: 700;
+        line-height: 1.1;
+        margin: 6px 0;
         white-space: normal;
     }
 
@@ -286,6 +288,23 @@
     }
 }
 
+.topics_popover {
+    min-width: var(--popover-menu-min-width);
+    width: min-content;
+
+    .topic-menu-item {
+        white-space: nowrap;
+    }
+
+    .topic-name {
+        color: var(--color-text-sidebar-popover-menu);
+        font-weight: 700;
+        line-height: 1.1;
+        margin: 6px 0;
+        white-space: normal;
+    }
+}
+
 ul {
     &.user-card-popover-actions i,
     &.actions_popover i,
@@ -317,21 +336,6 @@ ul {
                 line-height: 1;
                 top: 1px;
             }
-        }
-    }
-
-    &.topics_popover {
-        min-width: var(--popover-menu-min-width);
-        width: min-content;
-
-        .topic-menu-item {
-            white-space: nowrap;
-        }
-
-        .topic-name {
-            margin-top: 5px;
-            margin-bottom: 5px;
-            white-space: normal;
         }
     }
 
